[gd_scene load_steps=23 format=3 uid="uid://b85g60flfgfr3"]

[ext_resource type="Script" path="res://entity/player/marisa/MasterSpark.gd" id="1_i45vv"]
[ext_resource type="Script" path="res://entity/utility/GraphicFallback.gd" id="6_ayuoo"]
[ext_resource type="Material" uid="uid://dox27ncd2r5o3" path="res://entity/resource/glow.tres" id="6_jefjk"]
[ext_resource type="Texture2D" uid="uid://d2wacgirqsjjn" path="res://entity/resource/white-trans.tres" id="7_rj3lw"]
[ext_resource type="Texture2D" uid="uid://dxsf3vpqsosf1" path="res://entity/resource/fire_particle.png" id="8_wltid"]
[ext_resource type="PackedScene" uid="uid://bsnqtgxxjmolk" path="res://entity/player/marisa/ray_cast.tscn" id="9_hoe4h"]
[ext_resource type="Script" path="res://entity/utility/Particles2D.gd" id="9_q1ojr"]

[sub_resource type="Animation" id="Animation_d3sxi"]
resource_name = "Master Spark"
length = 4.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Beam:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [128.0, 470.0, 470.0, 128.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Beam/BeamParticle:speed_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [1.0, 2.0, 2.0, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Beam/BeamParticle:process_material:emission_box_extents")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(40, -480, 0), Vector3(235, -480, 0), Vector3(235, -480, 0), Vector3(40, -480, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Beam/BeamParticle:speed_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [1.0, 2.0, 2.0, 1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Beam/BeamParticle:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -527), Vector2(0, -530), Vector2(0, -530), Vector2(0, -527)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Beam/BeamParticle:process_material:scale_min")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.1, 0.2, 0.2, 0.1]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Beam/BeamParticle:process_material:scale_max")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.2, 0.4, 0.4, 0.2]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Beam:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 1, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -48), Vector2(0, -207), Vector2(0, -207), Vector2(0, -48)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Beam/BeamParticle:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(1, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1.2), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_65s67"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Beam:width")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [128.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Beam/BeamParticle:process_material:emission_box_extents")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(40, -480, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Beam/BeamParticle:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Beam/BeamParticle:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -422)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Beam/BeamParticle:process_material:scale_min")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.1]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Beam/BeamParticle:process_material:scale_max")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.2]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Beam:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -48)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Beam/BeamParticle:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1.2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_huuam"]
_data = {
"Master Spark": SubResource("Animation_d3sxi"),
"RESET": SubResource("Animation_65s67")
}

[sub_resource type="Shader" id="Shader_ppfoa"]
code = "shader_type canvas_item;
#pragma disable_preprocessor
render_mode blend_add;

uniform float time_scale = 1.0;
uniform sampler2D color_map : repeat_enable, filter_nearest;

varying vec2 uv;
void vertex()
{
	//shift color through time across color map - mix it with white color.
	uv = vec2(TIME * time_scale);
}
void fragment()
{
	COLOR.rgb = mix(texture(color_map, uv).rgb, vec3(1.), COLOR.r);
}"

[sub_resource type="Gradient" id="Gradient_nn53k"]
interpolation_color_space = 2
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0, 0.6, 1, 1, 0.483333, 1, 0, 1, 0, 0.6, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_k8r5t"]
gradient = SubResource("Gradient_nn53k")
width = 32

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2swgb"]
shader = SubResource("Shader_ppfoa")
shader_parameter/time_scale = 0.5
shader_parameter/color_map = SubResource("GradientTexture1D_k8r5t")

[sub_resource type="Gradient" id="Gradient_8pqvy"]
offsets = PackedFloat32Array(0, 0.345794, 0.64486, 1)
colors = PackedColorArray(0, 0, 0, 0, 0.466181, 0.466181, 0.466181, 1, 0.466667, 0.466667, 0.466667, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_u5d4h"]
gradient = SubResource("Gradient_8pqvy")
width = 960
height = 470
fill_to = Vector2(0, 1)

[sub_resource type="Curve" id="Curve_xum4h"]
min_value = -360.0
max_value = 360.0
_data = [Vector2(0, -360), 0.0, 720.0, 0, 1, Vector2(1, 360), 720.0, 0.0, 1, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_k4o8b"]
texture_mode = 1
curve = SubResource("Curve_xum4h")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_pud3s"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 16.0
angular_velocity_curve = SubResource("CurveTexture_k4o8b")
gravity = Vector3(0, 200, 0)
radial_accel_min = 100.0
radial_accel_max = 200.0
scale_min = 0.5
color = Color(0.254902, 0.419608, 0.94902, 1)
color_ramp = ExtResource("7_rj3lw")
hue_variation_max = 0.03

[sub_resource type="Gradient" id="Gradient_eytyl"]
offsets = PackedFloat32Array(0, 0.197802, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rvtdp"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(40, -480, 0)
gravity = Vector3(0, 200, 0)
scale_min = 0.1
scale_max = 0.2
color = Color(0.254902, 0.419608, 0.94902, 1)
color_ramp = ExtResource("7_rj3lw")
hue_variation_max = 0.13

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s1f2m"]
radius = 230.0
height = 1608.0

[node name="MasterSpark" type="Node2D"]
script = ExtResource("1_i45vv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_huuam")
}

[node name="Beam" type="Line2D" parent="."]
texture_filter = 1
texture_repeat = 2
material = SubResource("ShaderMaterial_2swgb")
position = Vector2(0, -48)
points = PackedVector2Array(0, 0, 0, -960)
width = 128.0
texture = SubResource("GradientTexture2D_u5d4h")
texture_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
sharp_limit = 0.0
round_precision = 16

[node name="CollisionParticle" type="GPUParticles2D" parent="Beam"]
visible = false
z_index = 3000
z_as_relative = false
material = ExtResource("6_jefjk")
position = Vector2(0, -1037)
amount = 64
process_material = SubResource("ParticleProcessMaterial_pud3s")
texture = ExtResource("8_wltid")
speed_scale = 2.0
visibility_rect = Rect2(-100, -20, 200, 172)
local_coords = true
script = ExtResource("9_q1ojr")
graphic_level = 1

[node name="CollisionParticle2" type="CPUParticles2D" parent="Beam"]
visible = false
z_index = 3000
z_as_relative = false
material = ExtResource("6_jefjk")
position = Vector2(0, -1037)
lifetime = 0.5
speed_scale = 2.0
local_coords = true
draw_order = 1
texture = ExtResource("8_wltid")
emission_shape = 1
emission_sphere_radius = 16.0
gravity = Vector2(0, 200)
angular_velocity_curve = SubResource("Curve_xum4h")
radial_accel_min = 100.0
radial_accel_max = 200.0
scale_amount_min = 0.5
color = Color(0.254902, 0.419608, 0.94902, 1)
color_ramp = SubResource("Gradient_eytyl")
hue_variation_max = 0.03
script = ExtResource("6_ayuoo")
graphic_level = 0

[node name="BeamParticle" type="GPUParticles2D" parent="Beam"]
z_index = 3000
z_as_relative = false
material = ExtResource("6_jefjk")
position = Vector2(0, -422)
scale = Vector2(1, 1.2)
amount = 512
process_material = SubResource("ParticleProcessMaterial_rvtdp")
texture = ExtResource("8_wltid")
lifetime = 2.0
visibility_rect = Rect2(-270, 800, 540, -1280)
draw_order = 0
script = ExtResource("9_q1ojr")
graphic_level = 2

[node name="RayCast2D" parent="." instance=ExtResource("9_hoe4h")]
position = Vector2(0, 70)

[node name="RayCast2D2" parent="RayCast2D" instance=ExtResource("9_hoe4h")]

[node name="RayCast2D3" parent="RayCast2D" instance=ExtResource("9_hoe4h")]
position = Vector2(-13, 0)

[node name="Spark" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="SparkHitbox" type="CollisionShape2D" parent="Spark"]
position = Vector2(0, -599)
shape = SubResource("CapsuleShape2D_s1f2m")
disabled = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
